Fix logo on IE

--- a/assets/scss/_components.scss
+++ b/assets/scss/_components.scss
@@ -96,6 +96,10 @@ body.home {
   max-height: rem-calc(105);
 }
 
+.logo {
+  max-width: rem-calc(208);
+}
+
 .menu-icon {
   margin-top: rem-calc(-2);
 }
